Restructured the REST Controller